# Class-Widgets

./: .gitattributes  README.MD  README.md  extra_menu.py  main.py  menu.py  pyproject.toml  schedule.full-example.yaml  utils.py  weather.py
.github/workflows/: build.yml
config/data/: weather_api.json
i18n/: base.ts  bo.ts  en_US.qm  en_US.ts  ja_JP.qm  ja_JP.ts  ug.qm  ug.ts  zh_CN.qm  zh_CN.ts  zh_HK.qm  zh_HK.ts  zh_SIMPLIFIED.qm  zh_SIMPLIFIED.ts
src/class_widgets/: __main__.py  config.py  timer.py
ui/default/: widget-countdown-day.ui  widget-countdown.ui  widget-current-activity.ui  widget-next-activity.ui  widget-time.ui
ui/default/dark/: widget-countdown-day.ui  widget-countdown.ui  widget-current-activity.ui  widget-next-activity.ui  widget-time.ui
ui/default/i18n/: base.ts  bo.ts  en_US.qm  en_US.ts  ja_JP.qm  ja_JP.ts  ug.qm  ug.ts  zh_CN.qm  zh_CN.ts  zh_HK.qm  zh_HK.ts  zh_SIMPLIFIED.ts
